--- a/license_automate.yaml
+++ b/license_automate.yaml
@@ -99,17 +99,11 @@
 
         - name: Check Azure License Availability and Approve or Reject
           set_fact:
-            approval_status_map: >-
-              {%- set status_map = {} -%}
-              {%- for request in servicenow_response.json.result -%}
-                {%- set request_sys_id = request.sys_id -%}
-                {%- if azure_license_response.json.value | length > 0 -%}  # Check if Azure has licenses
-                  {%- set _ = status_map.update({request_sys_id: 'approved'}) -%}  # Approve if licenses are available
-                {%- else -%}
-                  {%- set _ = status_map.update({request_sys_id: 'rejected'}) -%}  # Reject if no licenses
-                {%- endif -%}
-              {%- endfor -%}
-              {{ status_map }}
+            approval_status_map: "{{ 
+              servicenow_response.json.result | 
+              map(attribute='sys_id') | 
+              zip_longest([], fillvalue='approved' if azure_license_response.json.value | length > 0 else 'rejected') | 
+              dict }}"
 
         - name: Update Approval Status in ServiceNow
           uri:
