--- a/license_automate.yaml
+++ b/license_automate.yaml
@@ -99,19 +99,26 @@
 
         - name: Check Azure License Availability and Approve or Reject
           set_fact:
-            approval_status_map: "{{ status_map }}"
+            approval_status_map: "{{ result }}"
           vars:
-            status_map: >-
-              {% set result = {} %}
+            result: >-
+              {% set status_dict = {} %}
               {% for request in servicenow_response.json.result %}
                 {% set request_sys_id = request.sys_id %}
-                {% if azure_license_response.json.value | length > 0 %}
-                  {% set _ = result.update({request_sys_id: 'approved'}) %}
+                {% set license_type = request.short_description | default('') %}
+                {% set license_available = false %}
+                {% for license in azure_license_response.json.value %}
+                  {% if license.skuPartNumber == license_type and (license.prepaidUnits.enabled - license.consumedUnits) > 0 %}
+                    {% set license_available = true %}
+                  {% endif %}
+                {% endfor %}
+                {% if license_available %}
+                  {% set _ = status_dict.update({request_sys_id: 'approved'}) %}
                 {% else %}
-                  {% set _ = result.update({request_sys_id: 'rejected'}) %}
+                  {% set _ = status_dict.update({request_sys_id: 'rejected'}) %}
                 {% endif %}
               {% endfor %}
-              {{ result }}
+              {{ status_dict }}
 
         - name: Update Approval Status in ServiceNow
           uri:
@@ -125,11 +132,13 @@
             body_format: json
             body:
               approval: "{{ item.value }}"
+              comments: "{% if item.value == 'approved' %}License is available and has been approved.{% else %}License is not available. Request rejected.{% endif %}"
             return_content: yes
           loop: "{{ approval_status_map | dict2items }}"
-          when: approval_status_map is not none
+          register: update_results
 
         - name: Display Approval Results
           debug:
             msg: 
               - "Approval Status Updated: {{ approval_status_map }}"
+              - "ServiceNow Update Results: {{ update_results }}"
