--- a/license_automate.yaml
+++ b/license_automate.yaml
@@ -138,3 +138,58 @@
             msg: 
               - "License Available: {{ license_available }}"
               - "Approval Status Updated: {{ approval_status_map }}"
+
+    - name: Create Users in Azure for Approved Requests
+      block:
+        - name: Create Azure user for each approved request
+          uri:
+            url: "{{ graph_api_endpoint }}/users"
+            method: POST
+            headers:
+              Authorization: "Bearer {{ access_token }}"
+              Content-Type: "application/json"
+            body_format: json
+            body:
+              accountEnabled: true
+              displayName: "{{ item.requested_for.display_value | default('Suhas N H') }}"
+              mailNickname: "{{ item.requested_for.display_value | default('Suhas Asc') | regex_replace('[^a-zA-Z0-9]', '') | lower }}"
+              userPrincipalName: "{{ item.requested_for.display_value | default('suhas') | regex_replace('[^a-zA-Z0-9]', '') | lower }}@yourdomain.com"
+              passwordProfile:
+                forceChangePasswordNextSignIn: true
+                password: "{{ lookup('password', '/dev/null length=16 chars=ascii_letters,digits,punctuation') }}"
+            status_code: [201, 200]
+          loop: "{{ servicenow_response.json.result }}"
+          when: 
+            - license_available
+            - item.sys_id in approval_status_map and approval_status_map[item.sys_id] == 'approved'
+          register: azure_user_creation
+          ignore_errors: yes
+        
+        - name: Display User Creation Results
+          debug:
+            msg: "User Creation Results: {{ azure_user_creation.results | default([]) }}"
+            
+        - name: Update ServiceNow ticket state to closed complete for approved requests
+          uri:
+            url: "{{ servicenow_instance }}/api/now/table/{{ servicenow_table }}/{{ item.sys_id }}"
+            method: PATCH
+            user: "{{ servicenow_username }}"
+            password: "{{ servicenow_password }}"
+            force_basic_auth: yes
+            headers:
+              Content-Type: "application/json"
+            body_format: json
+            body:
+              request_state: "closed_complete"
+              comments: "Azure user has been created successfully. Ticket closed."
+            return_content: yes
+          loop: "{{ servicenow_response.json.result }}"
+          when: 
+            - license_available
+            - item.sys_id in approval_status_map and approval_status_map[item.sys_id] == 'approved'
+          register: ticket_state_update_results
+          
+        - name: Display Ticket State Update Results
+          debug:
+            msg: "Ticket State Updates: {{ ticket_state_update_results.results | default([]) }}"
+          when: license_available          
