--- a/flow_1.yaml
+++ b/flow_1.yaml
@@ -6,7 +6,7 @@
     servicenow_instance: "https://dev247928.service-now.com"
     servicenow_username: "admin"
     servicenow_password: "%ml4Vs9RXE/s"
-    servicenow_table: "sc_request"
+    servicenow_table: "sc_req_item"
     tenant_id: "195e8969-c853-47b4-83d0-36e044d83923"
     client_id: "e2e46ae3-2dee-4eed-a074-ddffd760ab2b"
     client_secret: "PQZ8Q~XSmMsU4dbgk2KyWMHK1h8X7ciD~H.1_csi"
