--- a/flow_1.yaml
+++ b/flow_1.yaml
@@ -11,8 +11,8 @@
     client_id: "e2e46ae3-2dee-4eed-a074-ddffd760ab2b"
     client_secret: "PQZ8Q~XSmMsU4dbgk2KyWMHK1h8X7ciD~H.1_csi"
     graph_api_endpoint: "https://graph.microsoft.com/v1.0"
-    requested_sys_id: "{{ sysid }}"
-    requested_license: "{{ license }}"
+    requested_sys_id: "{{ awx_webhook_payload.sys_id }}"
+    requested_license: "{{ awx_webhook_payload.license }}"
 
   tasks:
     - name: Debug Requested Variables
