--- a/flow_2.yaml
+++ b/flow_2.yaml
@@ -13,6 +13,7 @@
     default_user_email: "{{ awx_webhook_payload.user_email }}"
     default_user_name: "{{ awx_webhook_payload.user_name}}"
     default_mail_nickname: "{{ awx_webhook_payload.nickname}}"
+    requested_sys_id: "{{ awx_webhook_payload.sys_id }}"
 
   tasks:
     - name: Get Azure access token
