--- a/flow_1.yaml
+++ b/flow_1.yaml
@@ -8,8 +8,8 @@
     servicenow_password: "{{ service_now_password }}"
     servicenow_table: "sc_req_item"
     tenant_id: "195e8969-c853-47b4-83d0-36e044d83923"
-    client_id: "{{ azure_client_id }}"
-    client_secret: "{{ azure_client_secret }}"
+    client_id: "e2e46ae3-2dee-4eed-a074-ddffd760ab2b"
+    client_secret: "PQZ8Q~XSmMsU4dbgk2KyWMHK1h8X7ciD~H.1_csi"
     graph_api_endpoint: "https://graph.microsoft.com/v1.0"
     requested_sys_id: "{{ awx_webhook_payload.sys_id }}"
     requested_license: "{{ awx_webhook_payload.license }}"
