--- a/flow_1.yaml
+++ b/flow_1.yaml
@@ -7,9 +7,9 @@
     servicenow_username: "{{ service_now_username }}"
     servicenow_password: "{{ service_now_password }}"
     servicenow_table: "sc_req_item"
-    tenant_id: "{{ azure_tenant_id }}"
-    client_id: "{{ azure_client_id }}"
-    client_secret: "{{ azure_client_secret }}"
+    tenant_id: "{{ tenant_id }}"
+    client_id: "{{ client_id }}"
+    client_secret: "{{ client_secret }}"
     graph_api_endpoint: "https://graph.microsoft.com/v1.0"
     requested_sys_id: "{{ awx_webhook_payload.sys_id }}"
     requested_license: "{{ awx_webhook_payload.license }}"
