--- a/password_reset.yaml
+++ b/password_reset.yaml
@@ -1,1 +1,45 @@
+---
+- name: Reset Azure AD User Password using Microsoft Graph API
+  hosts: localhost
+  gather_facts: no
+  vars:
+    azure_ad_user_email: "{{ azure_ad_user_email }}"  # Change to the actual user email
+    new_password: "{{ new_password }}" # Change to the desired password
+    azure_tenant_id: "195e8969-c853-47b4-83d0-36e044d83923"  # Change to your Azure tenant ID
+    azure_client_id: "e2e46ae3-2dee-4eed-a074-ddffd760ab2b"  # Change to your Azure client ID
+    azure_client_secret: "PQZ8Q~XSmMsU4dbgk2KyWMHK1h8X7ciD~H.1_csi"  # Change to your Azure client secret
+  tasks:
+    - name: Get Microsoft Graph API Token
+      uri:
+        url: "https://login.microsoftonline.com/{{ azure_tenant_id }}/oauth2/v2.0/token"
+        method: POST
+        headers:
+          Content-Type: "application/x-www-form-urlencoded"
+        body: "client_id={{ azure_client_id }}&client_secret={{ azure_client_secret }}&scope=https://graph.microsoft.com/.default&grant_type=client_credentials"
+        body_format: form-urlencoded
+        return_content: yes
+      register: graph_token
 
+    - name: Reset Azure AD User Password via Microsoft Graph API
+      uri:
+        url: "https://graph.microsoft.com/v1.0/users/{{ azure_ad_user_email }}"
+        method: PATCH
+        headers:
+          Authorization: "Bearer {{ graph_token.json.access_token }}"
+          Content-Type: "application/json"
+        body: 
+          passwordProfile: 
+            forceChangePasswordNextSignIn: true
+            password: "{{ new_password }}"
+        body_format: json
+        status_code: [200, 204]
+      register: password_reset_result
+
+    - name: Debug Password Reset Output
+      debug:
+        msg: "Password reset successful for {{ azure_ad_user_email }}"
+      when: password_reset_result.status in [200, 204]
+
+    - name: Debug Password Reset Response
+      debug:
+        var: password_reset_result
